
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* ALLOWED_USERNAME_CHARS ;
 unsigned int MAXSIZE ;
 scalar_t__ isalnum (char) ;
 int printf (char*,...) ;
 unsigned int strlen (char*) ;
 char tolower (char) ;

void str2smallcase(char *input)
{
        if(strlen(input)>MAXSIZE)
        {
                printf(" Username too long! \n");
                return;
        }
        for(unsigned int i=0;i<strlen(input);i++)
        {
                if(isalnum(input[i]) || input[i] == '-' || input[i]=='_' || input[i]=='.')
                        input[i] = tolower(input[i]);
                else
                {
                        printf(" Bad characters in username!\n Allowed characters: %s\n",ALLOWED_USERNAME_CHARS);
                        return;
                }
        }
}
